<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="#F1FAEE"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#A8DADC"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/hello_there"
        android:textAlignment="center"
        android:textColor="#1D3557"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="234dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="#CDEAE5"
        android:contentDescription="@string/todo"
        android:src="@drawable/pic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EC9A9A"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/name_muhammad_hakimi_bin_ahmad"
        android:textColor="#1D3557"
        android:textSize="18sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#EC9A9A"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/matrix_2020977173"
        android:textColor="#1D3557"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#EC9A9A"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/class_rcs2405b"
        android:textColor="#1D3557"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#457B9D"
        android:fontFamily="@font/poppins"
        android:text="Github"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/calculator"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="#E63946" />


</LinearLayout>